fixing post's text align
paragraph text-align to center

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@ body {
 .post-content p {
   margin-bottom: 0.5rem;
   color: black;
+  text-align: center;
 }
 
 .post-content h1 {
